syntax = "proto3";

package erp;

import "google/protobuf/timestamp.proto";
import "common.proto";

message PurchaseOrder {
  string id = 1;
  string company_id = 2;
  string commodity_id = 3;
  string commodity_name = 4;
  double quantity = 5;
  string unit = 6;
  double price_per_unit = 7;
  string currency = 8;
  google.protobuf.Timestamp delivery_date = 9;
  google.protobuf.Timestamp created_at = 10;
  string status = 11;
}

message ListPurchaseOrdersRequest {
  string company_id = 1;
  google.protobuf.Timestamp since = 2;
  int32 limit = 3;
}

message ListPurchaseOrdersResponse {
  repeated PurchaseOrder purchase_orders = 1;
}

message GetPurchaseOrderRequest {
  string company_id = 1;
  string id = 2;
}

service ErpExtractorService {
  rpc ListPurchaseOrders(ListPurchaseOrdersRequest) returns (ListPurchaseOrdersResponse);
  rpc GetPurchaseOrder(GetPurchaseOrderRequest) returns (PurchaseOrder);
}
